1) Added android application
2) Added dedicated connection for jobs

3) Savings from UI should be propagated on UI

4) UI fixes in play mode: more key binding and full screen

5) different tiles for all modes. some of them need apikey as in
admin settings (carto)

bump to 0.1.12
